--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwind-elements": "^0.2.0",
     "tailwindcss": "3.3.3"
   }
 }
